--- a/puzzle/style.css
+++ b/puzzle/style.css
@@ -1,6 +1,10 @@
-*{
+canvas {
+    position:fixed;
+    top:0px;
+    left:0px;
     margin:0;
     padding:0;
+    z-index:-1;
 }
 .puzzle_piece{
     position: absolute;
