Testing with 27 locations and dynamic sizing
Made dynamic resizing of map to hopefully fit multiple device types and sizes. Testing with 27 locations across the world.

--- a/shared/pifu-map-testing/style.css
+++ b/shared/pifu-map-testing/style.css
@@ -1,3 +1,8 @@
 #pifuMap {
-    height: 700px;
+    height: 500px;
+}
+
+.leaflet-container a {
+    color: inherit;
+    text-decoration: inherit;
 }
