Organized files + hard-coded dims
Removed unnecessary files, renamed used ones + hard-coded image width/height

--- a/shared/adi-tizenkilenc-bday/style.css
+++ b/shared/adi-tizenkilenc-bday/style.css
@@ -1,127 +1,104 @@
-/* ---------------------- */
-/* display screen size and visualize rows/columns */
-
-body::before {
-    content: "XS";
-    color: red;
-    font-size: 2rem;
-    font-weight: bold;
-    position: fixed;
-    top: 0;
-    right: 0;
-}
-
-/*.col1 {
-    background-color: antiquewhite;
-}
-
-.col2 {
-    background-color: aliceblue;
-}
-
-.row {
-    border: 1px solid blue;
-    background: none;
-}*/
-  
-@media (min-width: 576px) {
-    body::before {
-        content: "SM";
-    }
-}
-  
-@media (min-width: 768px) {
-    body::before {
-        content: "MD";
-    }
-}
-  
-@media (min-width: 992px) {
-    body::before {
-        content: "LG";
-    }
-}
-  
-@media (min-width: 1200px) {
-    body::before {
-        content: "XL";
-    }
-}
-  
-@media (min-width: 1400px) {
-    body::before {
-        content: "XXL";
-    }
-}
-
-/* ---------------------- */
-
-#image-preview, #preview-div {
-    width: 92dvw;
-    height: auto;
-}
-
-@media (min-width: 576px) { /* SM */
-    #image-preview, #preview-div {
-        width: 90dvw;
-        height: auto;
-    }
-}
-
-@media (min-width: 768px) { /* MD */
-    #image-preview, #preview-div {
-        width: 75dvw;
-        height: auto;
-    }
-}
-
-@media (min-width: 992px) { /* LG */
-    #image-preview, #preview-div {
-        width: 40dvw;
-        height: auto;
-    }
-}
-
-@media (min-width: 1200px) { /* XL */
-    #image-preview, #preview-div {
-        width: 35dvw;
-        height: auto;
-    }
-}
-
-@media (min-width: 1400px) { /* XXL */
-    #image-preview, #preview-div {
-        width: 35dvw;
-        height: auto;
-    }
-}
-
-/*#image-preview img {
-    width: 100%;
-    height: auto;
-    display: block;
-}*/
-
-/*:root {
-    --font-sans-serif: "PT Sans";
-    --font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    --body-font-family: var(--font-sans-serif);
-    --body-font-size: 50px;
-    --body-font-weight: 400;
-    --body-line-height: 1.5;
-}
 body {
     position: relative;
-    font-family: "PT Sans";
-}*/
-/*h1 {
-    background-color: rgb(15, 188, 249);
-    padding: 20px;
-    font-family: var(--body-font-family);
-    font-style: normal;
-    font-variant: normal;
-    font-size: var(--body-font-size);
-    font-weight: bold;
-    color: rgb(255, 255, 255);
+    margin: 0;
+    padding: 0;
+}
+canvas {
+    position:fixed;
+    top:0px;
+    left:0px;
+    margin:0;
+    padding:0;
+    z-index:-1;
+}
+#title{
+    font-family: 'Arial';
+    letter-spacing: 3px;
+    font-size: 50px;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 40px;
+    color: black;
     text-align: center;
-}*/
+}
+.container {
+    position: fixed;
+    transform: translate(-50%, -50%) scale(0.75);
+    top: 50%;
+    left: 50%;
+}
+.col {
+    align-items: center;
+}
+
+table {
+    border-collapse: collapse;
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+td {
+    border-style : hidden!important;
+    padding: 0;
+    width: fit-content;
+}
+img {
+    display: block;
+}
+
+.table-slot{
+    position: relative;
+}
+
+.triangle-up {
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 30px solid #fff;
+    /*margin-top: 20px;
+    margin-left: 170px;*/
+    opacity: 50%;
+    position: absolute;
+    top: 5px;
+    left: 46%;
+}
+.triangle-down {
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 30px solid #fff;
+    /*margin-top: 330px;
+    margin-left: 170px;*/
+    opacity: 50%;
+    position: absolute;
+    bottom: 5px;
+    left: 46%;
+}
+.triangle-left {
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-right: 30px solid #fff;
+    border-bottom: 15px solid transparent;
+    /*margin-top: 175px;
+    margin-left: 10px;*/
+    opacity: 50%;
+    position: absolute;
+    top: 46%;
+    left: 5px;
+}
+.triangle-right {
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-left: 30px solid #fff;
+    border-bottom: 15px solid transparent;
+    /*margin-top: 175px;
+    margin-left: 310px;*/
+    opacity: 50%;
+    position: absolute;
+    top: 46%;
+    right: 5px;
+}
